@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2002/09/06 12:17:38 wiz Exp $
+$NetBSD: distinfo,v 1.5 2003/12/19 16:59:22 hubertf Exp $
 
-SHA1 (xarchon-0.50.tar.gz) = cee35cc80344cc54ff0be888c7f65c751cd45b45
-Size (xarchon-0.50.tar.gz) = 371299 bytes
+SHA1 (xarchon-0.60.tar.gz) = e68f79a712a8bff5ca18e5011d1582f7e5196f49
+Size (xarchon-0.60.tar.gz) = 435088 bytes
